--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "rm -rf ./dist && rollup --config",
     "test": "vitest run --coverage --coverage.exclude=demo",
-    "demo:ts": "ts-node ./demo/main.ts",
-    "demo:js": "ts-node ./demo/main.js",
+    "demo:ts": "npm run build && ts-node ./demo/main.ts",
+    "demo:js": "npm run build && node ./demo/main.js",
     "prepublishOnly": "npm run aws:login && npm run build && npm run test",
     "aws:login": "aws codeartifact login --tool npm --repository Nodejs --domain lolo --domain-owner 745798769136 --region eu-north-1 --profile lolo-ops-PowerUserAccess"
   },
@@ -23,15 +23,15 @@
   },
   "homepage": "https://github.com/lolocompany/lolo-rotating-queue#readme",
   "devDependencies": {
-    "@types/lodash": "^4.17.0",
-    "@vitest/coverage-v8": "^1.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
-    "vitest": "^1.3.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "rollup": "4.13.0",
-    "tslib": "^2.6.2"
+    "@types/lodash": "^4.17.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "rollup": "4.13.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   }
 }
